# bicycledigest

./: .gitignore  README.md  bicycledigest.py  config.yml  event.py  pyproject.toml  requirements.txt  session.py
bicycledigest/: bicycledigest.py  constants.py  dashboard.py
bicycledigest/analyze/: analyze_session.py
bicycledigest/extract/: sensor_files.py
bicycledigest/misc/: experimental.py
bicycledigest/transform/: event.py  session.py
data/: button.csv  gps.csv  lidar.csv  radar.csv
data/old_session/: button.csv  gps.csv  lidar.csv  radar.csv
