[project]
name = "bicycledigest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

